--- a/index.html
+++ b/index.html
@@ -26,50 +26,50 @@
     </header>
     <section class="hero"></section>
     <section class="content">
-        <section class="content-card">
+        <div class="content-card">
             <img src="./assets/images/search-engine-optimization.jpg" alt="A notebook is displayed containing different facets of Search Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </section>
-        <section class="content-card">
+        </div>
+        <div class="content-card">
             <img src="./assets/images/online-reputation-management.jpg" alt="A laptop displays a graph titled, REPUTATION." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </section>
-        <section class="content-card">
+        </div>
+        <div class="content-card">
             <img src="./assets/images/social-media-marketing.jpg" alt="A team of six individuals are together in a table setting discussing marketing strategies. SHARE, TWEET, MEDIA, and LIKE are all shown as ideas presented." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </section>
+        </div>
     </section>
     <section class="benefits">
-        <section class="benefit-info">
+        <div class="benefit-info">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="An icon of a funnel with an arrow pointing down to a dollar sign."/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </section>
-        <section class="benefit-info">
+        </div>
+        <div class="benefit-info">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="An icon of a tuxedo with a bright lightbulb representing a head."/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </section>
-        <section class="benefit-info">
+        </div>
+        <div class="benefit-info">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="An icon of a gear and three coins, with a dollar sign on each coin."/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </section>
+        </div>
     </section>
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
